<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="@color/transparentBlack" >
        
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:baselineAligned="false"
		    android:gravity="center" >
	    
	        
		   	<Space
			 	android:layout_width="0dp" 
			    android:layout_height="wrap_content"
			    android:layout_weight="20"
			    android:visibility="invisible" />
	     
		     <EditText
	 	     	android:id="@+id/email"
		      	android:layout_width="0dp" 
		      	android:layout_height="wrap_content"
		      	android:layout_weight="60"
		      	android:inputType="textEmailAddress"
		      	android:hint="@string/email" />
		     
		     <ImageView 
		        android:id="@+id/emailError"
		      	android:layout_width="0dp" 
		      	android:layout_height="wrap_content"
		      	android:layout_weight="5"
		      	android:src="@drawable/close"
	            android:adjustViewBounds="true"
	            android:visibility="invisible"  />
	     
		     <Space
		      	android:layout_width="0dp" 
		      	android:layout_height="wrap_content"
		      	android:layout_weight="20"
		      	android:visibility="invisible" />
	     
	 	</LinearLayout>
		    
	    <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:baselineAligned="false"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="20dp"
		    android:gravity="center" >
	        
	            
	        <Space
	        	android:layout_width="0dp" 
		        android:layout_height="wrap_content"
		        android:layout_weight="20"
		        android:visibility="invisible" />
		        
	         <EditText
		        android:id="@+id/password"
		        android:layout_width="0dp" 
		        android:layout_height="wrap_content"
		        android:layout_weight="60"
		        android:inputType="textPassword"
		        android:hint="@string/password" />
	         
	         <ImageView 
		        android:id="@+id/passwordError"
		      	android:layout_width="0dp" 
		      	android:layout_height="wrap_content"
		      	android:layout_weight="5"
		      	android:src="@drawable/close"
	            android:adjustViewBounds="true"
	            android:visibility="invisible" />
		         
	        <Space
		        android:layout_width="0dp" 
		        android:layout_height="wrap_content"
		        android:layout_weight="20"
		        android:visibility="invisible" />
		        
	    </LinearLayout>
    
    </LinearLayout>
	    
    <RelativeLayout
        android:layout_width="match_parent"
      	android:layout_height="match_parent" >
	      	
      	<Button
       		android:id="@+id/submit"
       		android:layout_width="match_parent" 
       		android:layout_height="wrap_content"
       		android:layout_alignParentBottom="true"
       		android:padding="@dimen/padding"
       		android:text="@string/connexion"
       		android:background="@color/foodManiaGreen" />
      	
    </RelativeLayout>
    
</LinearLayout>
